postgresql-common (102) UNRELEASED; urgency=low

  * debian/postgresql-common.postinst: Create /var/log/postgresql/ if it does
    not exist, before trying to chown/chmod it.
  * t/001_packages.t: Check that -server-dev-* is installed (for
    t/140_pg_config.t)
  * debian/supported-versions: Add Ubuntu 10.04.

 -- Martin Pitt <mpitt@debian.org>  Wed, 23 Sep 2009 14:29:34 +0200

postgresql-common (101) unstable; urgency=low

  * debian/supported-versions: Only support 8.4 in Ubuntu 9.10. (LP: #403381)
  * PgCommon.pm, change_ugid(): Fix taint error. (LP: #403693)
  * Update Swedish debconf translations, thanks Martin Bagge!
    (Closes: #539216)
  * t/090_multicluster.t: Run psql error tests under LC_MESSAGES=C to not fail
    under non-English locales.
  * pg_upgradecluster: Do not try to migrate "stats_*" settings to
    "track_counts" again if track_counts is already set. This led to disabling
    autovacuum on a 8.3 → 8.4 migration. (Closes: #540351)
  * pg_upgradecluster: Fix owner of pg_hba.conf after upgrade, to also work in
    tight umask settings.
  * debian/control: Bump Standards-Version to 3.8.3; no changes necessary.
  * debian/control: Re-promote ssl-cert to Depends:. Dropping to recommends
    does not buy anything and causes regressions. (Closes: #540982)

 -- Martin Pitt <mpitt@debian.org>  Sun, 06 Sep 2009 21:30:40 +0200

postgresql-common (100) unstable; urgency=low

  * t/005_PgCommon.t: Add test case for read_conf_file() for configuration
    files with an include directive. This reproduces #535428.
  * PgCommon.pm, read_conf_file(): Correctly handle includes.
    (Closes: #535428)
  * PgCommon.pm: Check environment variable $PG_CLUSTER_CONF_ROOT for an
    alternative configuration root (default: /etc/postgresql/). For
    testing/development purposes you can change this to point to e. g. your
    home directory, so that you can use the postgresql-common tools without
    root privileges. Thanks to Aidan Van Dyk for the suggestion and patch!