@@ -4,9 +4,9 @@ use strict;
 
 use lib 't';
 use TestLib;
-use POSIX qw/setlocale LC_ALL/;
+use POSIX qw/setlocale LC_ALL LC_MESSAGES/;
 
-use Test::More tests => 5 + ($#MAJORS+1)*5;
+use Test::More tests => 6 + ($#MAJORS+1)*5;
 
 foreach my $v (@MAJORS) {
     ok ((deb_installed "postgresql-$v"), "postgresql-$v installed");
@@ -21,6 +21,7 @@ ok ((deb_installed 'procps'), 'procps installed');
 ok ((deb_installed 'hunspell-en-us'), 'hunspell-en-us installed');
 
 # check installed locales to fail tests early if they are missing
+ok ((index (setlocale(LC_MESSAGES, ''), 'UTF-8')) > 0, 'system has a default UTF-8 locale');
 ok (setlocale (LC_ALL, "ru_RU"), 'locale ru_RU exists');
 ok (setlocale (LC_ALL, "ru_RU.UTF-8"), 'locale ru_RU.UTF-8 exists');
 
